# job-scout

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  config.py  pyproject.toml  run_tests.py
backend/src/: app.py  config.py  main.py  one_time_run_main.py
backend/src/alembic/: env.py
backend/src/alembic/versions/: 0a22bd370635_updated_relationships.py  0bb98dc31143_updated_relationships.py  45188fc7b09f_initial_tables.py  6b635902536e_add_stored_queries_table.py  a708f2572971_fix.py  b053d95bb282_fix.py  c12529f517cb_add_location_radius_to_resumes.py  e529316486e9_add_cascade_delete_for_resume_matches.py  fbabaf50856b_added_multiple_improvements.py
backend/src/constants/: processing_constants.py
backend/src/db/: session.py
backend/src/db/schemas/: __init__.py  company.py  cv.py  listing.py  match.py  resume.py  stored_query.py  user.py
backend/src/listing_processing/: abstract_listing_processor.py  listing_nlp_processor.py  listing_processor.py  nlp_listing_processor.py  ollama_listing_processing.py  ollama_listing_processor.py
backend/src/matching/: matching_callbacks.py  matching_queue.py
backend/src/models/: keyword_data.py  listing.py  listing_keywords.py  match.py  nlp_processed_listing.py  processed_listing.py  processed_resume.py  query.py  raw_resume.py  resume_keywords.py  user.py
backend/src/models/listing/: listing.py  listing_keyword_data.py
backend/src/models/resume/: resume.py  resume_keyword_data.py
backend/src/processing/: listing_processor.py  matching_processor.py  processor.py  resume_processing_queue.py  resume_processor.py  resume_processor_callbacks.py
backend/src/prompts/: job_details.py  job_matching.py  listing_keywords.py  resume_details.py  resume_keywords.py  resume_preprocessing.py
backend/src/prompts/llama2/: listing_keywords.py  matching_keywords.py  matching_summary.py  resume_details.py  resume_keywords.py
backend/src/prompts/llama3/: listing_keywords.py  matching_keywords.py  matching_summary.py  resume_keywords.py
backend/src/resume_processing/: abstract_resume_processor.py  nlp_resume_processor.py  ollama_resume_processor.py
backend/src/routes/: __init__.py  auth.py  matches.py  resumes.py
backend/src/schemas/: listing.py
backend/src/scraper/: jooble_scraper.py  listing_scraper.py
backend/src/scraping/: listing_callbacks.py  scheduler.py  scraper_registry.py  scraping_manager.py
backend/src/scraping/query_managers/: aggregating_query_manager.py  query_manager.py  simple_query_manager.py
backend/src/scraping/scrapers/: jooble_scraper.py  listing_scraper.py
backend/src/temp_tests/: ollama_listing_test.py  ollama_test.py  resume_extraction_test.py
backend/src/utils/: description.py  http.py  logger.py  password.py  pdf.py  processing.py  processing_utils.py  salary.py
backend/tests/: README.md  conftest.py
backend/tests/integration/: test_integration.py
backend/tests/unit/: test_auth.py  test_matching_processor.py  test_models_and_utils.py  test_resume_processing.py  test_resume_routes.py  test_scraping.py
frontend/: .env.example  config.py  pyproject.toml
frontend/src/: api_client.py  main.py  mock_data.py  models.py  styles.py
frontend/src/pages/: home.py  login.py  matches.py  register.py  resumes.py  root.py
frontend/src/utils/: drawer.py
