[project]
name = "backend"
version = "0.1.0"
description = "The backend for JobScout"
authors = [
    {name = "Mateusz Piechowski",email = "you@example.com"},
    {name = "Mariusz Rychlicki",email = "mariusz.rychlicki@proton.me"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
