[project]
name = "backend"
version = "0.1.0"
description = "The backend for JobScout"
authors = [
    {name = "Mateusz Piechowski",email = "you@example.com"},
    {name = "Mariusz Rychlicki",email = "mariusz.rychlicki@proton.me"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "uvicorn (>=0.34.3,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
