[project]
name = "backend"
version = "0.1.0"
description = "The backend for JobScout"
authors = [
    {name = "Mateusz Piechowski",email = "you@example.com"},
    {name = "Mariusz Rychlicki",email = "mariusz.rychlicki@proton.me"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "python-dotenv>=1.1.0,<2.0.0",
    "sqlalchemy>=2.0.41,<3.0.0",
    "alembic>=1.16.1,<2.0.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
    "pydantic-settings>=2.9.1,<3.0.0",
    "pydantic>=2.11.5,<3.0.0",
    "httpx>=0.28.1,<0.29.0",
    "fastapi>=0.115.0,<0.116.0",
    "apscheduler>=3.11.0,<4.0.0",
    "asyncpg>=0.30.0,<0.31.0",
    "uvicorn[standard]>=0.34.0,<0.35.0",
    "python-dateutil>=2.9.0,<3.0.0",
    "pgvector>=0.4.1,<0.5.0",
    "spacy>=3.8.0,<4.0.0",
    "keybert>=0.9.0,<0.10.0",
    "ollama>=0.5.1,<0.6.0",
    "python-multipart>=0.0.20,<0.1.0",
    "pymupdf>=1.26.1,<2.0.0",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "bcrypt>=4.0.0,<5.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-cov>=4.1.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.28.0",
    "testcontainers>=3.7.0",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
    "-v"
]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]


[tool.poetry.group.dev.dependencies]
aiosqlite = "^0.21.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
